--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,13 +1,18 @@
 @import 'variables';
+@import url('https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap');
 
 body {
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Ropa Sans', sans-serif;
 }
 
-h1 {
+h1,
+h2,
+h3, .characters-list {
     margin-block-start: 0;
     margin-block-end: 0;
+    padding-inline-start: 0;
 }
 
 header {
@@ -20,7 +25,61 @@ header {
     justify-content: center;
 
     h1 {
+        margin-left: 2rem;
         color: $yellow;
+        font-size: 42px;
+        font-weight: 400;
+        letter-spacing: 2px;
     }
 
+}
+
+main {
+    background-color: $grey-1;
+    min-height: 100vh - 30vh;
+
+    .main-wrapper {
+        position: absolute;
+        top: -2rem;
+        display: flex;
+        justify-content: space-around;
+        position: relative;
+    }
+
+    aside {
+        background-color: rgb(137, 129, 129);
+        min-width: 300px;
+
+        h2 {
+            text-align: center;
+        }
+    }
+
+    aside.characters {
+        h2 {
+            background-color: $grey-2;
+        }
+        .characters-list {
+            list-style-type: none;
+            li:nth-child(even) {
+                background-color: $grey-4;
+            }
+            li:nth-child(odd) {
+                background-color: $grey-3;
+            }
+            li:hover {
+                background-color: hotpink;
+            }
+        }
+        .pagination {
+            display: flex;
+            justify-content: center;
+        }
+    }
+
+    aside.details {
+        h2 {
+            background-color: $grey-4;
+        }
+    }
 }
